src/css/components/input.css
.input {
  font-size: 1rem;
  padding: 0.8rem 0.5rem;
  box-sizing: border-box;
  background-color: var(--component-bg-color);
  border: 0.12rem solid var(--component-border-color);
  border-radius: var(--component-border-radius);
  transition: all 0.2s;
  color: var(--color-font);
}

.input:focus {
  border-color: var(--color-accent);
  box-shadow: var(--component-box-shadow);
  outline: none;
}

.input[type="password"] {
  font-family: "Courier New", Courier, monospace;
}

.inp-error {
  border-color: var(--component-color-fail);
}

.error-message {
  color: var(--component-color-fail);
}

